--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,15 +31,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.+'
 
-    implementation 'com.squareup.okhttp:okhttp:2.4.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.3.1'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'io.reactivex:rxjava:1.3.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-
-    implementation 'com.qiniu:qiniu-android-sdk:7.3.+'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.qiniu:qiniu-android-sdk:7.3.12'
     implementation 'com.qiniu:happy-dns:0.2.10'
     implementation 'com.google.code.gson:gson:2.8.0'
 }
