--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".ui.AddActivity" />
         <activity android:name=".ui.ChangeActivity" />
+        <activity android:name=".ui.TestActivity" />
     </application>
 
 </manifest>
